--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "homepage": "https://github.com/Maru-007/sneaky-snacker#readme",
   "dependencies": {
-    "blessed": "^0.1.81",
-    "inquirer": "^9.1.4",
+    "chalk": "^4.1.2",
+    "chalk-animation": "^2.0.3",
+    "inquirer": "^8.2.5",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0"
   }
