--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "player1": "node child/index.js",
-    "player2": "node dog/index.js"
+    "player1": "node child/index.js"
   },
   "repository": {
     "type": "git",
