--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "chalk-animation": "^2.0.3",
+    "express": "^4.18.2",
     "inquirer": "^8.2.5",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0"
   }
 }
-
