--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chalk-animation": "^2.0.3",
     "express": "^4.18.2",
     "inquirer": "^8.2.5",
+    "prettier": "^2.8.4",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0"
   }
