--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chance": "^1.1.10",
     "express": "^4.18.2",
     "inquirer": "^8.2.5",
+    "jest": "^29.4.3",
     "prettier": "^2.8.4",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0"
