--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "inquirer": "^8.2.5",
     "jest": "^29.4.3",
+    "openai": "^3.2.1",
     "prettier": "^2.8.4",
     "socket.io": "^4.6.0",
     "socket.io-client": "^4.6.0"
