--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chalk": "^4.1.2",
     "chalk-animation": "^2.0.3",
     "chance": "^1.1.10",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "inquirer": "^8.2.5",
     "jest": "^29.4.3",
